Fix overflow for real

--- a/src/site/styles/user/layout-fixes.scss
+++ b/src/site/styles/user/layout-fixes.scss
@@ -51,5 +51,5 @@ footer a {
 
 /* Fix overflow, so button and toc position is correct */
 html, body {
-    overflow-x: visible;
+    overflow: visible;
 }
